Moved keys from run directory to resources